# EmulationStation

./: .gitignore  CMakeLists.txt
es-app/: CMakeLists.txt
es-app/src/: SystemData.cpp  SystemData.h  main.cpp
es-app/src/guis/: GuiFastSelect.cpp  GuiGamelistOptions.cpp  GuiMenu.cpp
es-app/src/views/: SystemView.cpp  ViewController.cpp  ViewController.h
es-app/src/views/gamelist/: BasicGameListView.cpp  BasicGameListView.h  DetailedGameListView.cpp  DetailedGameListView.h  GridGameListView.cpp  GridGameListView.h  IGameListView.cpp  IGameListView.h  ISimpleGameListView.cpp  ISimpleGameListView.h  VideoGameListView.cpp  VideoGameListView.h
es-core/src/: GuiComponent.h  Settings.cpp  ThemeData.cpp  ThemeData.h  Window.cpp  platform.cpp
es-core/src/components/: IList.h  ImageComponent.cpp  ImageComponent.h  VideoComponent.cpp  VideoComponent.h
es-core/src/resources/: TextureData.cpp  TextureData.h  TextureDataManager.cpp  TextureDataManager.h  TextureResource.cpp  TextureResource.h
es-gamedata/: CMakeLists.txt
es-gamedata/src/: GameData.cpp  GameData.h  GameDataException.cpp  GameDataException.h  GameDataFolder.cpp  GameDataFolder.h  GameDataGame.cpp  GameDataGame.h  GameDataItem.cpp  GameDataItem.h  GameDataItemFolder.cpp  GameDataItemFolder.h  GameDataItemGame.cpp  GameDataItemGame.h  GameDataList.cpp  GameDataList.h  GameDataMetadata.cpp  GameDataMetadata.h  GameDataSystem.cpp  GameDataSystem.h  GameDataTags.cpp  GameDataTags.h  MetaData.h
es-gamedata/test/: GameDataFolderTest.cpp  GameDataGameTest.cpp  GameDataItemTest.cpp  GameDataListTest.cpp  GameDataSystemTest.cpp  GameDataTagsTest.cpp  GameDataTest.cpp  MockGameDatabase.cpp  MockGameDatabase.h  TestMain.cpp
